--- a/style.css
+++ b/style.css
@@ -182,4 +182,44 @@ h1{
         padding: 8px;
         font-size: small;
     }
-  }         
+  }
+  
+  @media only screen and (max-width: 425px) {
+    .home-image img{
+     width: 70px;
+     height: 70px;
+     left: -2px;
+    }
+    .home-image{
+        width: 200px;
+        height: 200px;
+        display: none;
+    }
+    .home{
+        width: 100%;
+        background: linear-gradient(-90deg,  red 83%, rgb(255, 255, 255) 20%);
+    }
+    .btn{
+        padding: 8px;
+        font-size: small;
+    }
+  }       
+
+  @media only screen and (max-width: 2560px) {
+    
+    body{
+        font-size: larger;
+        font-weight: bolder;
+    }
+
+    .home-image img{
+        width: 550px;
+        height: 400px;
+        left: -2px;
+       }
+
+    .home-image{
+           width: 500px;
+           height: 500px;
+       }
+  }
